--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "karma-webpack": "^1.7.0",
     "phantomjs-prebuilt": "^2.1.7",
     "react-addons-test-utils": "^15.0.2",
+    "react-hot-loader": "^1.3.0",
     "redux-devtools": "^3.2.0",
-    "webpack": "^1.12.13"
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
     "babel-polyfill": "^6.7.4",
